samples/_failures_safe/1761217757_0dc4f0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f83d003c.c: In function ‘main’:
./samples/SAFE/__tmp_f83d003c.c:136: error: expected ‘)’ at end of input
./samples/SAFE/__tmp_f83d003c.c:135:8: note: to match this ‘(’
  135 |     if (decompress_data(compressed_data, compressed_size, decompressed_data, &decompressed_size) != EXIT_SUCCESS
      |        ^
./samples/SAFE/__tmp_f83d003c.c:135:5: error: expected declaration or statement at end of input
  135 |     if (decompress_data(compressed_data, compressed_size, decompressed_data, &decompressed_size) != EXIT_SUCCESS
      |     ^~
